# qtribe_pro

./: .gitignore  CMakeLists.txt  README.md
include/: basic_serializer.hpp  jackIO.hpp  noticator_widget.hpp  qtribe.hpp  sequencerCore.hpp  serializer.hpp  stepSequence.h  stepSequence.hpp  stepSequencerWidget.hpp
src/: basic_serializer.cpp  jackIO.cpp  main.cpp  noticator_widget.cpp  qtribe.cpp  sequencerCore.cpp  stepSequence.cpp  stepSequencerWidget.cpp  stepsequencerwidgetbase.ui
tests/: main_window_test.cpp  main_window_test.hpp  noticator_widget_test.cpp
